# breeding

./: .eslintrc.json  Anchor.toml  README.md  create_spl_token.js  mint_to.js  package.json
app/: .env.template  next.config.js  package.json  tsconfig.json  useBreeding.ts
app/components/Header/: Header.tsx
app/components/NFTGallery/: CollectionItem.tsx  NFTGallery.tsx
app/components/NFTSelectInput/: NFTSelectInput.tsx
app/components/NFTSelector/: NFTSelector.tsx
app/components/WalletManager/: WalletManager.tsx
app/components/WalletProvider/: WalletProvider.tsx
app/components/icons/: LoadingIcon.tsx  index.tsx
app/hooks/: useCandyMachine.ts  useV2.ts  useWalletNFTs.tsx
app/hooks/useBreeding/: useBreeding.ts
app/lib/: candy-machine.ts
app/pages/: _app.tsx  index.tsx
app/public/fonts/: fonts.css
app/styles/: theme.ts
app/useBreeding/: useBreeding.ts  utils.ts
app/utils/: breeding.ts  nfts.ts
app/utils/candy-machine/: candy-machine.ts  connection.ts  mint.ts
programs/breed-program/: Cargo.toml
programs/breed-program/src/: instructions.rs  lib.rs
tests/: breed-program.ts  mainnet.ts
