[package]
name = "breed-program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "breed_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.24.0"
anchor-spl = "0.24.0"
solutils = { git = "https://github.com/lucasig11/solutils", branch = "main" }
